0.15.1 fixed z-index function bug

--- a/src/functions/_z-index.scss
+++ b/src/functions/_z-index.scss
@@ -1,8 +1,7 @@
 @function zIndex($zIndexMapKey) {
   @if map-has-key($zIndexMap, $zIndexMapKey) {
-    @return map-has-key($zIndexMap, $zIndexMapKey);
-  }
-  @else {
+    @return map-get($zIndexMap, $zIndexMapKey);
+  } @else {
     @error "The key #{$zIndexMapKey} does not exist in $zIndexMap.";
   }
 }
